# pg_elephantduck

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  pg_elephantduck.control
db-settings/primary/: pg_hba.conf  postgresql.conf
db-settings/primary/scripts/: create_replication_user.sql
db-settings/standby/: postgresql.conf
db-settings/standby/scripts/: reset.sh
dockerfiles/: Dockerfile
src/: custom_scan.rs  datetime_util.rs  extract_clauses.rs  lib.rs  settings.rs  storage.rs  tam.rs
src/tests/: mod.rs  test_tam.rs
