[package]
name = "pg_elephantduck"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_elephantduck"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
arrow = "53.3.0"
duckdb = { version = "1.1.1", features = ["bundled"] }
once_cell = "1.20.2"
parquet = "53.3.0"
pgrx = "=0.12.8"

[dev-dependencies]
pgrx-tests = "=0.12.8"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
